@@ -3,10 +3,13 @@
 
 
 2010/xx/xx  ver 0.1.1
+   - implemented SkinndMesh, MorphingMesh.
+   - implemented duplicate() method.
    - rewrote Loader class.
        - Now, compressed file is ok.
-   - implemented duplicate() method.
-   - fix color component from (-128,127) to (0,255)
+   - fix color component from (-128,127) to (0,255).
+   - fix scale,biased coordinate.
+       - Now, it's ok.
 
 2010/04/08  ver 0.1.0
    - first release
